--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+2
+version: 1.1.0+1
 
 environment:
   sdk: '>=3.1.0 <4.0.0'
@@ -30,21 +30,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  mqtt_client: ^10.2.1
-  shared_preferences: ^2.2.0
-  dio: ^5.3.2
-  firebase_core: ^3.4.1
-  firebase_messaging: ^15.1.1
-  font_awesome_flutter: ^10.4.0
+  mqtt_client: ^10.5.1
+  shared_preferences: ^2.5.3
+  dio: ^5.8.0+1
+  firebase_core: ^3.12.1
+  firebase_messaging: ^15.2.4
+  font_awesome_flutter: ^10.8.0
   flutter_native_splash: ^2.4.1
-  badges: ^3.1.2
   uuid: ^4.4.0
-  flutter_bloc: ^8.1.6
-  equatable: ^2.0.5
+  flutter_bloc: ^9.1.0
+  equatable: ^2.0.7
   connectivity_plus: ^6.0.5
-  mobile_scanner: ^5.2.3
   webview_flutter: ^4.10.0
-  awesome_snackbar_content: ^0.1.4
+  awesome_snackbar_content: ^0.1.5
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
