--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   connectivity_plus: ^6.1.3
   webview_flutter: ^4.10.0
   awesome_snackbar_content: ^0.1.5
+  cached_network_image: ^3.4.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
